fix: fix whitespace aos bug

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -109,6 +109,7 @@
         top: 0px;
         left: 0px;
         right: 0px;
+        width: 100vw;
         border-radius: 0px;
     }
 
